add feature: getMintHistoryV3
