# rpcserver/ordx/handler_v3.go
@@ -133,9 +133,9 @@ func (s *Handle) getUtxoInfoListV3(c *gin.Context) {
 // @Query start query int false "Start index for pagination"
 // @Query limit query int false "Limit for pagination"
 // @Security Bearer
-// @Success 200 {object} HolderListResp "Successful response"
+// @Success 200 {object} HolderListRespV3 "Successful response"
 // @Failure 401 "Invalid API Key"
-// @Router /tick/holders/{ticker} [get]
+// @Router /v3/tick/holders/{ticker} [get]
 func (s *Handle) getHolderListV3(c *gin.Context) {
 	resp := &HolderListRespV3{
 		BaseResp: rpcwire.BaseResp{
@@ -179,16 +179,16 @@ func (s *Handle) getHolderListV3(c *gin.Context) {
 // @Query start query int false "Start index for pagination"
 // @Query limit query int false "Limit for pagination"
 // @Security Bearer
-// @Success 200 {object} rpcwire.MintHistoryResp "Successful response"
+// @Success 200 {object} MintHistoryRespV3 "Successful response"
 // @Failure 401 "Invalid API Key"
-// @Router /tick/history/{ticker} [get]
+// @Router /v3/tick/history/{ticker} [get]
 func (s *Handle) getMintHistoryV3(c *gin.Context) {
-	resp := &rpcwire.MintHistoryResp{
+	resp := &MintHistoryRespV3{
 		BaseResp: rpcwire.BaseResp{
 			Code: 0,
 			Msg:  "ok",
 		},
-		Data: &rpcwire.MintHistoryData{
+		Data: &MintHistoryDataV3{
 			ListResp: rpcwire.ListResp{
 				Total: 0,
 				Start: 0,
@@ -205,7 +205,7 @@ func (s *Handle) getMintHistoryV3(c *gin.Context) {
 	if err != nil {
 		limit = 100
 	}
-	mintHistory, err := s.model.GetMintHistory(tickerName, start, limit)
+	mintHistory, err := s.model.GetMintHistoryV3(tickerName, start, limit)
 	if err != nil {
 		resp.Code = -1
 		resp.Msg = err.Error()
@@ -213,7 +213,7 @@ func (s *Handle) getMintHistoryV3(c *gin.Context) {
 		return
 	}
 
-	resp.Data = &rpcwire.MintHistoryData{
+	resp.Data = &MintHistoryDataV3{
 		ListResp: rpcwire.ListResp{
 			Total: uint64(mintHistory.Total),
 			Start: int64(start),
